6035.	[bug]		Refactor the dns_resolver unit to store the fetch
			contexts and zone counter directly in the hash
			tables without buckets and implement effective
			cleaning of both objects. [GL #3709]

6034.	[func]		Deprecate alt-transfer-source, alt-transfer-source-v6
			and use-alt-transfer-source. [GL #3694]

6033.	[func]		Log messages related to serve-stale now include the RR
			type involved. [GL !7145]

6032.	[bug]		After change 5995, zone transfers were using a small
			compression context that only had space for the first
			few dozen names in each message. They now use a large
			compression context with enough space for every name.
			[GL #3706]

6031.	[bug]		Move the "final reference detached" log message
			from dns_zone unit to the DEBUG(1) log level.
			[GL #3707]

6030.	[bug]		Refactor the ADB to use a global LRU queue, store
			the ADB names and ADB entries directly in the hash
			tables instead of buckets, and properly clean the
			ADB names and entries when not in use. [GL #3239]
			[GL #3238] [GL #2615] [GL #2078] [GL #2437]
			[GL #3312] [GL #2441]

6029.	[cleanup]	Remove the unused external cache cleaning mechanism
			as RBTDB has its own internal cache cleaning
			mechanism and we don't support any other database
			implementations. [GL #3639]

6028.	[performance]	Build-time code generation of DNS RRtype switches
			is now much faster. [GL !7121]

6027.	[bug]		Fix assertion failure in isc_http API used by
			statschannel if the read callback would be called
			on HTTP request that has been already closed.
			[GL #3693]

6026.	[cleanup]	Deduplicate time unit conversion factors.
			[GL !7033]

6025.	[bug]		Copy TLS identifier when setting up primaries for
			catalog member zones. [GL #3638]

6024.	[func]		Deprecate 'auto-dnssec'. [GL #3667]

6023.	[func]		Remove dynamic update DNSSEC management feature.
			[GL #3686]

6022.	[performance]	The decompression implementation in dns_name_fromwire()
			is now smaller and faster. [GL #3655]
